# BlendedPiecewiseMoebiusMaps

./: .gitignore  CMakeLists.txt  README.md  user_guide.md
data/: UV.mtl  cone.py  extract_faces.py
include/BPM/: Mobius.h
include/Render/: Renderer.h  Shader.h  ShaderManager.h
include/Scene/: Camera.h  Mesh.h  MeshModel.h  Parser.h  Scene.h
include/UI/: Callbacks.h  ControlState.h  UI.h
include/Utils/: Constants.h  Geometry.h
resources/objects/: UV.mtl
resources/shaders/neighbors/: neighbors_cs.glsl
resources/shaders/normals/: normals.fs  normals.gs  normals.vs
resources/shaders/points_and_lines/: points_and_lines.fs  points_and_lines.vs
resources/shaders/texture_type/: bpm_fs.glsl  bpm_gs.glsl  bpm_vs.glsl
resources/shaders/vertex_color/: vertex_color.fs  vertex_color.vs
src/: Constants.cpp  main.cpp
src/BPM/: Mobius.cpp
src/Render/: Renderer.cpp  Shader.cpp  ShaderManager.cpp
src/Scene/: Camera.cpp  Mesh.cpp  MeshModel.cpp  Parser.cpp  Scene.cpp
src/UI/: Callbacks.cpp  ControlState.cpp  UI.cpp
src/Utils/: Geometry.cpp  Utils.cpp
